<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4026.8">
  <GVL Name="RCP" Id="{931831fb-e0cf-44d9-b3af-2e43fab37b16}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	aRecipe		: ARRAY[1..100] OF RecipeStep; //Recipe Structure
	iRcpTotalStep			: INT; //Recip Total Number
	bRcpInit				: BOOL;	
	iRcpOperationState		: SINT; //0: Inital State, 10 : RUN, 20 : PAUSE, 30 : RESTART, 40: STOP, 50: END
	iRcpStepN				: INT;
	sRcpStepDescription		: STRING;
	
	bRcpStepN_TaskDone		: BOOL;
	fbRcpStepN_Task_Timer	: TON;
	bRcpStepN_TaskDone_DelayDone: BOOL;
	
	bRcpStart				: BOOL;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>